2009-06-01  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_handle_damage): Don't handle damage in
	non-composited mode.
	(mb_wm_comp_mgr_clutter_client_track_damage): New function to toggle
	damage event subscription on/off.
	(mb_wm_comp_mgr_clutter_map_notify_real): Call
	mb_wm_comp_mgr_clutter_client_track_damage to setup damage tracking.
	Tries to handle the case when damage tracking is re-enabled after a
	pause in the tracking.
	(mb_wm_comp_mgr_clutter_client_destroy): Call
	mb_wm_comp_mgr_clutter_client_track_damage to tear down damage
	tracking.
	(mb_wm_comp_mgr_clutter_fetch_texture): Set bound=FALSE if the window
	is invalid (allows the caller to check for success).

	Release 0.2.41

2009-05-29  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Remove use of mb_wm_theme_get_title_xy and use a constant value to
	make submenus usable again. Fixes: NB#117301. 

	Apply patch from Laszlo Pere for NB#115253.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_get_actor): Fix the NULL checking.

2009-05-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* configure.ac: Remove -O0 flag from compilation options, it is set
	from debian/rules when needed.

	* matchbox/core/mb-window-manager.[ch] (mb_wm_unredirect_client,
	mb_wm_setup_redirection): New functions for offscreen redirection
	manipulation.
	(mb_wm_handle_map_notify): Unredirect the client if we are in the mode.

2009-05-27  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#117084 System-modal windows lose focus
	                 if an app sends _NET_ACTIVE_WINDOW
	
	* matchbox/core/mb-window-manager.c: System modality is tested
	using a separate function; this means we don't mistakenly allow
	focus to transfer to non-dialogues merely because they're intransient.

2009-05-27  Gordon Williams <gordon.williams@collabora.co.uk>
